Rendered Simple Types
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/params.mustache
+++ b/templates/params.mustache
@@ -29,10 +29,10 @@ enum {{name}} {
 }
 {{/enums}}
 
-{{#integer_strings}}
+{{#unions}}
 {{>params.traits}}
 union {{name}} {
   integer: Integer,
   string: String
 }
-{{/integer_strings}}
+{{/unions}}
