--- a/templates/params.traits.mustache
+++ b/templates/params.traits.mustache
@@ -8,7 +8,7 @@
 )
 {{/deprecation_info}}
 {{#default}}
-@default({{default}})
+@default({{{default}}})
 {{/default}}
 {{#pattern}}
 @pattern("{{{pattern}}}")
