--- a/templates/params.traits.mustache
+++ b/templates/params.traits.mustache
@@ -7,9 +7,9 @@
   "x-version-deprecated": "{{{deprecation_version}}}"
 )
 {{/deprecation_info}}
-{{#default}}
+{{#with_default}}
 @default({{{default}}})
-{{/default}}
+{{/with_default}}
 {{#pattern}}
 @pattern("{{{pattern}}}")
 {{/pattern}}
