--- a/templates/operations.mustache
+++ b/templates/operations.mustache
@@ -2,7 +2,7 @@
 $version: "2"
 namespace OpenSearch
 
-// TO-DO: Fill in API Reference URL
+// TODO: Fill in API Reference URL
 @externalDocumentation(
   "API Reference": ""
 )
@@ -13,7 +13,7 @@ namespace OpenSearch
   "x-version-added": "1.0"
 )
 @http(method: "{{method}}", uri: "{{uri}}")
-@documentation("{{description}}")
+@documentation("{{{description}}}")
 operation {{operation_name}} {
   input: {{input_name}},
   output: {{output_name}}
