--- a/templates/params.mustache
+++ b/templates/params.mustache
@@ -5,14 +5,18 @@ namespace OpenSearch
 {{#simples}}
 {{>params.traits}}
 {{smithy_type}} {{smithy_name}}
+{{#_blank_line}}
 
+{{/_blank_line}}
 {{/simples}}
 {{#lists}}
 {{>params.traits}}
 list {{smithy_name}} {
   member: String
 }
+{{#_blank_line}}
 
+{{/_blank_line}}
 {{/lists}}
 {{#enums}}
 {{>params.traits}}
@@ -21,5 +25,7 @@ enum {{smithy_name}} {
   {{key}} = "{{value}}"
   {{/options}}
 }
+{{#_blank_line}}
 
+{{/_blank_line}}
 {{/enums}}
