Added TODO for output_structure
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/structures.mustache
+++ b/templates/structures.mustache
@@ -36,5 +36,6 @@ structure {{structure_name}} with [{{common_query_structure}}{{#with_body}}, {{c
 }
 
 {{/input_structures}}
+// TODO: Fill in Output Structure
 @output
 structure {{output_structure}} {}
