opensearch_file_generator.rb
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/operations.mustache
+++ b/templates/operations.mustache
@@ -4,7 +4,7 @@ namespace OpenSearch
 
 // TODO: Fill in API Reference URL
 @externalDocumentation(
-    "API Reference": ""
+    "API Reference": "https://opensearch.org/docs/latest"
 )
 
 {{#operations}}
