--- a/templates/params.mustache
+++ b/templates/params.mustache
@@ -1,6 +1,7 @@
 {{license_header}}
 $version: "2"
 namespace OpenSearch
+use opensearch.openapi#vendorExtensions
 
 {{#simples}}
 {{>params.traits}}
