Fixed missing trait definition for operation files
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/operations.mustache
+++ b/templates/operations.mustache
@@ -1,6 +1,7 @@
 {{license_header}}
 $version: "2"
 namespace OpenSearch
+use opensearch.openapi#vendorExtensions
 
 // TODO: Fill in API Reference URL
 @externalDocumentation(
