Disambiguator for query params
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/structures.mustache
+++ b/templates/structures.mustache
@@ -10,7 +10,7 @@ structure {{common_query_structure}} {
     @required
     {{/required?}}
     {{>structure.traits}}
-    {{original_name}}: {{smithy_name}},
+    {{param_name}}: {{smithy_name}},
     {{#_blank_line}}
 
     {{/_blank_line}}
