Logic for `overloaded-param`
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/structure.traits.mustache
+++ b/templates/structure.traits.mustache
@@ -10,7 +10,7 @@
 {{#with_extensions}}
 @vendorExtensions(
 {{#extensions}}
-    "x-{{{key}}}": {{{value}}},
+    "x-{{{key}}}": "{{{value}}}",
 {{/extensions}}
 )
 {{/with_extensions}}
