Logic for required Request Bodies
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/templates/structures.mustache
+++ b/templates/structures.mustache
@@ -27,6 +27,9 @@ structure {{common_query_structure}} {
     "x-serialize": "bulk"
 )
 {{/bulk_body}}
+{{#body_description}}
+@documentation("{{{body_description}}}")
+{{/body_description}}
 structure {{common_body_structure}} {}
 {{/common_body_structure}}
 
